tests/error/in_func2.gw
// [contains] in function 'test'
function void test() {
	void i;
}
